# python-docker

./: Dockerfile  app.py  compose.yaml  docker-python-kubernetes.yaml  pyproject.toml
.github/workflows/: docker-image.yml
