[tool.poetry]
name = "python-docker-dev"
version = "0.1.0"
description = ""
authors = ["gillesxr <gillesxr@tutanota.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.6.2"
click = "8.1.6"
colorama = "0.4.6"
flask = "2.3.2"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
psycopg2-binary = "2.9.6"
werkzeug = "2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
